Correction composant banner & Préparation du composant Collapse

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -21,7 +21,6 @@
 }
 
 .banner_div_img {
-  background: url("../../assets/banner_img.png");
   background-position: center center;
   height: 223px;
   width: 100%;
@@ -31,7 +30,7 @@
   z-index: 0;
 }
 
-.banner_background {
+.banner_div_background {
   background-color: black;
   height: 223px;
   width: 100%;
@@ -51,13 +50,12 @@
   }
 
   .banner_div_img {
-    background: url("../../assets/banner_img_mobile.png");
     background-size: cover;
     height: 111px;
     border-radius: 10px;
   }
 
-  .banner_background {
+  .banner_div_background {
     height: 111px;
     border-radius: 10px;
   }
